--- a/less/widgets/typography.less
+++ b/less/widgets/typography.less
@@ -115,7 +115,8 @@ h6 {
 // -------------------------
 
 .category-title,
-.tags-title {
+.tags-title,
+.product-attribute-title {
     font-size: @font__button--font-size;
     font-weight: @font__button--font-weight;
     text-transform: uppercase;
